--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,10 @@ header {
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    z-index: 200;
     width: 1160px;
     padding: 0 60px;
     margin: 0 auto;
-    z-index: 200;
+    z-index: 1000;
 }
 .index_header::before {
   content: "";
@@ -68,17 +67,33 @@ header {
 nav {
     display: none;
     flex-wrap: wrap;
-    bottom: -100px;
-    left: 0;
-    margin-right: 580px;
     position: absolute;
-    padding: 0 60px;
+    top: 199px;
+    left: 50%;
+    margin-left: -580px;
+    padding: 0 60px 33px 60px;
     width: 1160px;
     background-color: #f7e296;
+    z-index: 2000;
 }
 .catalog_list {
+  display: flex;
+  flex-direction: column;
   max-width: 200px;
-  margin-right: 62px;
+  margin-right: 55px;
+  z-index: 10000;
+}
+.catalog_list li {
+  margin: 7px 0;
+}
+.catalog_list a {
+  font-family: "OpenSans Light", "Arial", sans-serif;
+}
+.catalog_list a:hover {
+  color: #635a35;
+}
+.catalog_list a:active {
+  color: #ac9e5c;
 }
 .logo {
     display: flex;
@@ -92,18 +107,66 @@ nav {
   letter-spacing: 0.01em;
   margin-left: -0.01em;
 }
+.logo a:hover {
+  color: #464646;
+}
+.logo a:active {
+  color: #666666;
+}
 .shop_navigation {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    position: relative;
     width: 520px;
 }
 .search {
+  width: 350px;
   font-family: "OpenSans Light", "Arial", sans-serif;
   font-size: 15px;
   border: none;
   outline: none;
+  color: #ac9e69;
   background-color: transparent;
+}
+.search:hover {
+  color: #635a3c;
+}
+.search:focus {
+  color: #000;
+}
+.search:focus + .btn_search {
+  display: flex;
+}
+.btn_search {
+  display: none;
+  position: absolute;
+  top: -12px;
+  right: 75px;
+  background-color: inherit;
+  border: 2px solid #000;
+  padding: 12px 20px;
+  font-family: "OpenSans Light", "Arial", sans-serif;
+}
+.btn_search:hover {
+  background-color: #000;
+  color: #fff;
+}
+.btn_search:active {
+  color: #4d4d4d;
+}
+.btn_search::after {
+  content: "";
+  display: flex;
+  position: absolute;
+  left: -357px;
+  bottom: -2px;
+  width: 357px;
+  height: 2px;
+  background-color: #000;
+}
+.search:focus .btn_search {
+  display: flex;
 }
 .catalog_open {
   padding-top: 42px;
@@ -130,6 +193,17 @@ nav {
   font-size: 15px;
   letter-spacing: 0.01em;
 }
+/* задаём общую стилизацию при динамических эффектах ссылок в header */
+.catalog_link:hover,
+.about_us a:hover,
+.personal_mode a:hover {
+  color: #635a3c;
+}
+.catalog_link:active,
+.about_us a:active,
+.personal_mode a:active {
+  color: #ac9e69;
+}
 .login_logout {
   display: flex;
   flex-wrap: wrap;
@@ -152,7 +226,6 @@ nav {
   text-transform: uppercase;
   letter-spacing: 0.2em;
 }
-/* компенсируем отступ, полученный от заданного кернинга у последней ссылки */
 .about_us a:last-child {
   margin-right: -0.2em;
 }
@@ -167,7 +240,7 @@ nav {
   width: 1160px;
   padding: 50px 60px 0 600px;
   margin: 0 auto;
-  z-index: 700;
+  z-index: 1000;
 }
 .promo_slider input[name="promo_selector"] {
   display: none;
@@ -176,10 +249,11 @@ nav {
   display: flex;
   justify-content: flex-end;
   position: absolute;
-  top: 380px;
+  bottom: 137px;
   right: 0;
   padding-right: 70px;
   width: 300px;
+  min-height: 10px;
 }
 .promo_toogle label {
   display: flex;
@@ -191,6 +265,9 @@ nav {
   box-sizing: content-box;
   margin: 0 11px;
   cursor: pointer;
+}
+.promo_toogle label:hover {
+  border-color: #999;
 }
 #pr_1:checked ~ .promo_toogle label[for="pr_1"],
 #pr_2:checked ~ .promo_toogle label[for="pr_2"],
@@ -260,6 +337,21 @@ nav {
   background-color: #f0c52e;
   z-index: -10;
 }
+.pr_slide a:hover::after {
+  content: "";
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -20px;
+  width: 220px;
+  height: 40px;
+  background-color: #f0c52e;
+  z-index: -10;
+}
+.pr_slide a:active {
+  color: #a88a20;
+}
 .promo_features {
   display: flex;
   flex-wrap: wrap;
@@ -304,6 +396,16 @@ nav {
   width: 160px;
   height: 160px;
   background-color: #f7e296;
+}
+.nav_item:hover::before {
+  content: "";
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 160px;
+  height: 160px;
+  background-color: #f0c52e;
 }
 .nav_item h2 {
   margin-top: 34px;
@@ -383,6 +485,18 @@ input[name="adv_radio"] {
   margin-top: -4px;
   width: 160px;
   height: 8px;
+  background-color: #f0c52e;
+  z-index: -10;
+}
+.advantages_list a:hover::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -20px;
+  width: 160px;
+  height: 40px;
   background-color: #f0c52e;
   z-index: -10;
 }
@@ -498,6 +612,21 @@ input[name="adv_radio"] {
   background-color: #f0c52e;
   z-index: -10;
 }
+.info_btn:hover::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -20px;
+  width: 260px;
+  height: 40px;
+  background-color: #f0c52e;
+  z-index: -10;
+}
+.info_btn:active {
+  color: #a88a20;
+}
 .contacts {
   display: flex;
   flex-direction: column;
@@ -517,6 +646,127 @@ input[name="adv_radio"] {
   width: 80px;
   height: 7px;
   background-color: #000;
+}
+/* Модальное окно обратной связи */
+.feedback {
+  display: none;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  margin-left: -480px;
+  width: 960px;
+  padding: 95px 100px 85px 100px;
+  background-color: #fff;
+  box-shadow: 0 15px 45px -5px #a0a1a1;
+  z-index: 4000;
+}
+.feedback form {
+  display: flex;
+  flex-wrap: wrap;
+}
+.feedback label {
+  font-family: "Gilroy ExtraBold", "Arial", sans-serif;
+  font-size: 18px;
+}
+.user_info {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  margin-bottom: 35px;
+}
+.user_info:first-child {
+  margin-right: 40px;
+}
+.user_info input {
+  width: 360px;
+  background-color: #f2f2f2;
+  border: none;
+  outline: none;
+  margin-top: 6px;
+  padding: 15px 5px 17px 20px;
+  font-family: "OpenSans", "Arial", sans-serif;
+  font-size: 14px;
+  color: #adadad;
+}
+.user_info input:hover {
+  color: #a8a8a8;
+  background-color: #eaeaea;
+}
+.user_info input:focus {
+  box-shadow: inset 3px 0 0 0 #e5e5e5,
+  inset -3px 0 0 0 #e5e5e5,
+  inset 0 3px 0 0 #e5e5e5,
+  inset 0 -3px 0 0 #e5e5e5;
+  background-color: #fff;
+  color: #464646;
+}
+.feedback textarea {
+  width: 760px;
+  background-color: #f2f2f2;
+  border: none;
+  outline: none;
+  margin-top: 7px;
+  padding: 15px 5px 0 20px;
+  font-family: "OpenSans", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: #adadad;
+  resize: none;
+}
+.feedback textarea:hover {
+  color: #a8a8a8;
+  background-color: #eaeaea;
+}
+.feedback textarea:focus {
+  box-shadow: inset 3px 0 0 0 #e5e5e5,
+  inset -3px 0 0 0 #e5e5e5,
+  inset 0 3px 0 0 #e5e5e5,
+  inset 0 -3px 0 0 #e5e5e5;
+  background-color: #fff;
+  color: #464646;
+}
+/* Добавляем этот класс незаполненным до отправки полям формы (через JS) */
+.send_error {
+  color: #b09f9f;
+  background-color: #f6dada;
+}
+.mail_submit {
+  position: relative;
+  border: none;
+  outline: none;
+  background-color: inherit;
+  font-family: "Gilroy ExtraBold", "Arial", sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-top: 45px;
+  padding-left: 35px;
+  letter-spacing: 0.2em;
+  z-index: 100;
+  cursor: pointer;
+}
+.mail_submit::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -5px;
+  width: 200px;
+  height: 8px;
+  background-color: #f0c52e;
+  z-index: -10;
+}
+.mail_submit:hover::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -20px;
+  width: 200px;
+  height: 40px;
+  background-color: #f0c52e;
+  z-index: -10;
 }
 /* footer */
 footer {
@@ -538,6 +788,12 @@ footer {
   margin-left: -0.01em;
   color: #f7e184;
 }
+.f_logo a:hover {
+  color: #f0c52e;
+}
+.f_logo a:active {
+  color: #796c3f;
+}
 .footer_personal_mode {
   display: flex;
   justify-content: space-between;
@@ -553,7 +809,13 @@ footer {
   font-family: "OpenSans Light", "Arial", sans-serif;
   font-size: 15px;
   line-height: 36px;
+  color: #c8c8c8;
+}
+.f_personal_link a:hover {
   color: #fff;
+}
+.f_personal_link a:active {
+  color: #7e7e7e;
 }
 .footer_info {
   display: flex;
@@ -583,6 +845,12 @@ footer {
   text-transform: uppercase;
   letter-spacing: 0.2em;
   color: #fff;
+}
+.f_about_shop a:hover {
+  color: #b5b5b5;
+}
+.f_about_shop a:active {
+  color: #7e7e7e;
 }
 .external_links {
   display: flex;
@@ -633,6 +901,12 @@ footer {
 .paginator_list {
   display: flex;
   flex-wrap: wrap;
+}
+.paginator_list a:hover {
+  color: #666666;
+}
+.paginator_list a:active {
+  color: #e5e5e5;
 }
 .paginator_page {
   display: flex;
@@ -727,6 +1001,11 @@ aside {
   box-sizing: content-box;
   cursor: pointer;
 }
+.toogle:hover {
+  background-color: #7eae29;
+  border-color: #fff;
+  box-shadow: 0 2px 3px 0 #777;
+}
 .toogle_min {
   top: 50%;
   left: 0;
@@ -784,6 +1063,21 @@ aside {
   background-color: #f0c52e;
   z-index:-10;
 }
+.filter_btn:hover::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -20px;
+  width: 200px;
+  height: 40px;
+  background-color: #f0c52e;
+  z-index:-10;
+}
+.filter_btn:active {
+  color: #a88a20;
+}
 /* Результаты поиска */
 .results {
   display: flex;
@@ -825,6 +1119,9 @@ aside {
 .criteria .sort_inactive {
   color: #a4a4a4;
 }
+.criteria .sort_inactive:hover {
+  color: #666666;
+}
 .sort_direction {
   display: flex;
   align-items: center;
@@ -838,30 +1135,145 @@ aside {
   justify-content: space-between;
   flex-wrap: wrap;
   width: 832px;
-  padding-left: 72px;
+  padding: 70px 0 0 72px;
 }
 .product {
   display: flex;
   flex-direction: column;
+  position: relative;
   width: 360px;
+  margin-bottom: 49px;
+}
+.purchase_mode {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 360px;
+}
+.product:hover .purchase_mode {
+  display: flex;
+}
+.product:hover img {
+  opacity: 0.4;
+}
+/* небольшая импровизация :-) */
+.product:hover .icon_new {
+  color: #f0c52e;
+  border-color: #f0c52e;
+}
+.buy {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  font-size: 18px;
+  text-transform: uppercase;
+  width: 200px;
+  letter-spacing: 0.2em;
+  z-index: 50;
+  margin-top: 180px;
+}
+.buy::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -4px;
+  width: 200px;
+  height: 8px;
+  background-color: #f0c52e;
+  z-index: -10;
+}
+.buy:hover::before {
+  content: "";
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -20px;
+  width: 200px;
+  height: 40px;
+  background-color: #f0c52e;
+  z-index: -10;
+}
+.buy:active {
+  color: #a88a20;
+}
+.compare {
+  font-family: "OpenSans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  color: #7f7f7f;
+  margin-top: 15px;
+  z-index: 100;
+}
+.compare:hover {
+  color: #000;
+}
+.compare:active {
+  color: #d3d3d3;
 }
 .product_descript {
   display: flex;
   justify-content: space-between;
+  margin-top: 34px;
+}
+.icon_new {
+  position: absolute;
+  top: 29px;
+  right: 26px;
+  text-transform: uppercase;
+  font-family: "Gilroy ExtraBold", "Arial", sans-serif;
+  padding: 17px 11px;
+  color: #bfbfbf;
+  border: 3px solid #d7d7d7;
+  border-radius: 50%;
+  cursor: default;
 }
 .product_descript h2 {
-  font-size: 18px;
   width: 260px;
+  font-size: 18px;
+  min-height: 36px;
+  letter-spacing: 0.01em;
+}
+.product_descript span {
+  font-family: "Gilroy Light", "Arial", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.01em;
 }
 /* Страницы результатов */
 .pages {
   display: flex;
   justify-content: space-between;
   width: 760px;
-  padding: 0 30px;
   background-color: #ebebeb;
+  margin: -12px 0 73px 0;
+}
+.leaf_results {
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  padding: 25px 30px 26px 30px;
+}
+.leaf_results:hover {
+  background-color: #d9d9d9;
+}
+.leaf_results:active {
+  color: #9c9c9c;
 }
 .page_list {
   display: flex;
+  align-items: center;
   max-width: 440px;
+}
+.page_list li {
+  margin: 0 14px;
+}
+.list_inactive {
+  color: #a4a4a4;
+}
+.list_inactive:hover {
+  color: #666666;
 }
