--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ header {
     width: 1160px;
     padding: 0 60px;
     margin: 0 auto;
-    z-index: 1000;
 }
 .index_header::before {
   content: "";
@@ -108,6 +107,9 @@ height: 16px;
 background-position: -4607px -10px;
 background-image: url("../img/sprite.png");
 background-color: transparent;
+}
+.header_mode form {
+  width: 350px;
 }
 .search {
   width: 350px;
@@ -353,7 +355,7 @@ nav {
   flex-direction: column;
   max-width: 200px;
   margin-right: 55px;
-  z-index: 10000;
+  z-index: 3000;
 }
 .catalog_list li {
   margin: 7px 0;
@@ -431,7 +433,6 @@ nav {
   font-family: "Gilroy ExtraBold";
   font-size: 179.2px;
   color: #fff;
-  z-index: -10;
 }
 .pr_slide1::before {
   content: "";
@@ -825,70 +826,39 @@ input[name="adv_radio"] {
   margin: 105px auto 90px auto;
 }
 .manufacturers a {
-  display: flex;
+
   position: relative;
   width: 260px;
   height: 100px;
+  background-color: transparent;
 }
-.manufacturers a:nth-child(1)::before {
-    content: "";
-    display: flex;
-    position: absolute;
-    bottom: 2px;
-    left: 0px;
-    width: 260px;
-    height: 100px;
-    background-position: -1902px -10px;
+.manufacturers a:nth-child(1) {
+    background-position: -1902px -13px;
     background-image: url("../img/sprite.png");
-    background-color: transparent;
 }
-.manufacturers a:nth-child(1):hover::before {
-  background-position: -3582px -10px;
+.manufacturers a:nth-child(1):hover {
+  background-position: -3582px -13px;
 }
-.manufacturers a:nth-child(2)::before {
-    content: "";
-    display: flex;
-    position: absolute;
-    bottom: 2px;
-    left: 0px;
-    width: 260px;
-    height: 100px;
-    background-position: -2742px -10px;
+.manufacturers a:nth-child(2) {
+    background-position: -2742px -13px;
     background-image: url("../img/sprite.png");
-    background-color: transparent;
 }
-.manufacturers a:nth-child(2):hover::before {
-  background-position: -3022px -10px;
+.manufacturers a:nth-child(2):hover {
+  background-position: -3022px -13px;
 }
-.manufacturers a:nth-child(3)::before {
-    content: "";
-    display: flex;
-    position: absolute;
-    bottom: 2px;
-    left: 0px;
-    width: 260px;
-    height: 100px;
-    background-position: -2462px -10px;
+.manufacturers a:nth-child(3) {
+    background-position: -2462px -13px;
     background-image: url("../img/sprite.png");
-    background-color: transparent;
 }
-.manufacturers a:nth-child(3):hover::before {
-  background-position: -2182px -10px;
+.manufacturers a:nth-child(3):hover {
+  background-position: -2182px -13px;
 }
-.manufacturers a:nth-child(4)::before {
-    content: "";
-    display: flex;
-    position: absolute;
-    bottom: 2px;
-    left: 0px;
-    width: 260px;
-    height: 100px;
-    background-position: -3302px -10px;
+.manufacturers a:nth-child(4) {
+    background-position: -3302px -13px;
     background-image: url("../img/sprite.png");
-    background-color: transparent;
 }
-.manufacturers a:nth-child(4):hover::before {
-  background-position: -3862px -10px;
+.manufacturers a:nth-child(4):hover {
+  background-position: -3862px -13px;
 }
 /* Информация */
 .info {
@@ -1159,7 +1129,7 @@ footer {
   flex-direction: column;
   position: relative;
   width: 1160px;
-  margin: 54px auto;
+  margin: 55px auto;
 }
 .footer_container::before {
   content: "";
@@ -1939,10 +1909,11 @@ aside {
   border-radius: 50%;
   cursor: default;
 }
-.product_descript a {
+.product_descript h2 {
   width: 260px;
   font-size: 18px;
   min-height: 36px;
+  line-height: normal;
   letter-spacing: 0.01em;
 }
 .product_descript span {
@@ -1957,7 +1928,7 @@ aside {
   flex-wrap: wrap;
   width: 760px;
   background-color: #ebebeb;
-  margin: -11px 0 74px 0;
+  margin: -11px 0 73px 0;
 }
 .leaf_results {
   text-transform: uppercase;
