--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,8 @@ background-color: transparent;
   padding-left: 39px;
   font-family: "OpenSans Light", "Arial", sans-serif;
   font-size: 15px;
+  line-height: 36px;
+  height: 15px;
   border: none;
   outline: none;
   color: #ac9e69;
